First draft submitted to prof
Signed-off-by: Gaurav Kumar Singh <gauravks@mail.uni-paderborn.de>

--- a/HPC_SeminarThesis/hpc_seminar.tex
+++ b/HPC_SeminarThesis/hpc_seminar.tex
@@ -13,7 +13,7 @@
 \newcommand{\participant}{Gaurav Kumar Singh}
 \newcommand{\affiliation}{Paderborn University}
 \urldef{\emailaddress}\url{gauravks@mail.uni-paderborn.de}
-\newcommand{\topic}{Designs for accelerating Bioinformatic applications using FPGAs based HPC system}
+\newcommand{\topic}{Accelerating Bioinformatic applications using FPGA based HPC system}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
