--- a/HPC_SeminarThesis/references.bib
+++ b/HPC_SeminarThesis/references.bib
@@ -457,7 +457,7 @@
 }
 
 @inproceedings{martins_multithreaded_2000,
-	title = {A {MULTITHREADED} {PARALLEL} {IMPLEMENTATION} {OF} {A} {DYNAMIC} {PROGRAMMING} {ALGORITHM} {FOR} {SEQUENCE} {COMPARISON}},
+	title = {A {multithreaded} {parallel} {implementation} {of} {a} {dynamic} {programming} {algorithm} {for} {sequence} {comparison}},
 	isbn = {978-981-02-4515-3 978-981-4447-36-2},
 	url = {http://www.worldscientific.com/doi/abs/10.1142/9789814447362_0031},
 	doi = {10.1142/9789814447362_0031},
